force-app/main/default/objects/breg_Notification_Category__mdt/breg_Notification_Category__mdt.object-meta.xml
<CustomObject>
    <description>Aalta BREG-972</description>
    <label>Notification Category</label>
    <pluralLabel>Notification Categories</pluralLabel>
</CustomObject>