force-app/main/default/objects/breg_Notification_Category__mdt/fields/breg_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Email_Template_Name__c</fullName>
    <description>Aalta BREG-516</description>
    <label>Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>