force-app/main/default/objects/breg_Notification_Category__mdt/fields/breg_Fee_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Fee_Code__c</fullName>
    <description>Aalta BREG-972</description>
    <label>Fee Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B73</fullName>
                <default>true</default>
                <label>B73</label>
            </value>
            <value>
                <fullName>B74</fullName>
            </value>
            <value>
                <fullName>B75</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>