force-app/main/default/objects/breg_Notification_Category__mdt/fields/breg_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>breg_Related_Object__c</fullName>
    <description>Aalta BREG-516</description>
    <label>Related Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>breg_TN_TM_SM__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>