force-app/main/default/objects/breg_Notification_Category__mdt/fields/breg_Subscription_Category__c.field-meta.xml
<CustomField>
    <fullName>breg_Subscription_Category__c</fullName>
    <description>Aalta BREG-516</description>
    <label>Subscription Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Name, Trademark, Service Mark Reminder</fullName>
                <default>true</default>
                <label>Trade Name, Trademark, Service Mark Reminder</label>
            </value>
            <value>
                <fullName>Publicity Rights Name Renewal Reminder</fullName>
            </value>
            <value>
                <fullName>Annual Report Reminder</fullName>
            </value>
            <value>
                <fullName>My Business Alerts</fullName>
            </value>
            <value>
                <fullName>Entity List Builder Email</fullName>
            </value>
            <value>
                <fullName>Subscriber Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>