force-app/main/default/objects/breg_Notification_Category__mdt/fields/Display_Options__c.field-meta.xml
<CustomField>
    <fullName>Display_Options__c</fullName>
    <description>Aalta BREG-516</description>
    <label>Display Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always Show Category for Related Object</fullName>
                <default>true</default>
                <label>Always Show Category for Related Object</label>
            </value>
            <value>
                <fullName>Depends on Related Object Field</fullName>
            </value>
            <value>
                <fullName>Always Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>